refactor: add swagger requests docs
